# Fast-Finder

./: .gitignore  README.md
WarpApp/: WarpApp-Bridging-Header.h  rust_core.swift  rust_coreFFI.h
WarpApp/WarpApp/: ContentView.swift  WarpAppApp.swift  WindowConfig.swift  librust_core.dylib  rust_core.swift  rust_coreFFI.h  rust_coreFFI.modulemap
WarpApp/WarpApp.xcodeproj/: project.pbxproj
rust_core/: Cargo.toml
rust_core/src/: lib.rs
