[package]
name = "rust_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "rust_core"

[dependencies]
# We enable 'cli' to get access to the tool builder
uniffi = { version = "0.30.0", features = ["cli"] }
walkdir = "2"
ignore = "0.4"
fuzzy-matcher = "0.3.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip = "2.2"
